# Autonomous_Robot

./: README.md  challenge.launch.py
maps/: my_map.yaml
src/lebotics_navigation/: CMakeLists.txt  package.xml
src/lebotics_navigation/launch/: navigation_launch.py
src/lebotics_navigation/maps/: my_map.pgm
src/lebotics_navigation/rviz/: nav_config.rviz
